// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`$group-* non-hover on native should de-opt (preserve as inline prop) 1`] = `
"
    import { YStack } from 'tamagui'
    export function Test() {
      return (
        <YStack group="row">
          <YStack
            backgroundColor="red"
            $group-row-press={{ backgroundColor: 'green' }}
          />
        </YStack>
      )
    }
"
`;

exports[`$group-*-hover on native should drop dead hover work 1`] = `
"
    import { YStack } from 'tamagui'
    export function Test() {
      return (
        <__TamaguiNativeView style={{"flexDirection":"column"}}>
          <__TamaguiNativeView
            style={{"flexDirection":"column","backgroundColor":"red"}}

          />
        </__TamaguiNativeView>
      )
    }

const __TamaguiNativeView = require('react-native').View;"
`;

exports[`$gtMd only should NOT apply on small screens 1`] = `
"
    import { YStack } from 'tamagui'
    export function Test() {
      return (
        <YStack
          h={100}
          w={100}
          bc="red"
          $gtMd={{ bc: 'green' }}
        />
      )
    }
"
`;

exports[`$md and $gtMd media queries should respect breakpoint boundaries 1`] = `
"
    import { YStack } from 'tamagui'
    export function Test() {
      return (
        <YStack
          h={100}
          w={100}
          bc="red"
          $md={{ bc: 'yellow' }}
          $gtMd={{ bc: 'green' }}
        />
      )
    }
"
`;

exports[`$theme-* on native should de-opt (preserve as inline prop) 1`] = `
"
    import { YStack } from 'tamagui'
    export function Test() {
      return (
        <YStack backgroundColor="red" $theme-dark={{ backgroundColor: 'green' }} />
      )
    }
"
`;

exports[`basic conditional extraction 1`] = `
"
    import { YStack } from 'tamagui'
    let x = true
    export function Test() {
      return (
        <>
          <YStack backgroundColor={x ? 'red' : 'blue'} />
          <YStack {...x && { backgroundColor: 'red' }} />
        </>
      )
    }
"
`;

exports[`basic extraction 1`] = `
"
    import { YStack } from 'tamagui'
    export function Test() {
      return (
        <__TamaguiNativeView style={{"flexDirection":"column","backgroundColor":"red"}} />
      )
    }

const __TamaguiNativeView = require('react-native').View;"
`;

exports[`do NOT flatten dynamic values with theme access 1`] = `
"
    import { YStack } from 'tamagui'
    export function Test(props) {
      return (
        <YStack bg='$color' height={props.height}/>
      )
    }
"
`;

exports[`do NOT flatten dynamic values with theme access, dynamic values, and conditional 1`] = `
"
    import { YStack } from 'tamagui'
    export function Test(props) {
      return (
        <YStack bg={props.isLoading ? '$color' : 'red'} height={props.height}/>
      )
    }
"
`;

exports[`do NOT flatten multiple dynamic values with theme access and conditional 1`] = `
"
    import { YStack } from 'tamagui'
    export function Test(props) {
      return (
        <YStack bg={props.isLoading ? '$color' : 'red'} height={props.height} width={props.width}/>
      )
    }
"
`;

exports[`dynamic ternary remains on the runtime component 1`] = `
"
  import { View } from 'tamagui'
  export function Test(props) {
    return (
      <View marginBottom={props !== 123 ? 12 : 0} />
    )
  }
"
`;

exports[`flat transform props 1`] = `
"
    import { YStack } from 'tamagui'
    export function Test(isLoading) {
      return (
        <YStack
          scale={isLoading ? 1 : 2}
          x={10}
          y={20}
          rotate="10deg"
        />
      )
    }
"
`;

exports[`handles style order merge properly 1`] = `
"
    import { YStack } from 'tamagui'
    export function Test(props) {
      return (
        <YStack
          scale={props.isLoading ? 1 : 2}
          x={10}
          {...props}
          rotate="10deg"
        />
      )
    }
"
`;

exports[`hoverStyle on native should drop dead hover work 1`] = `
"
    import { YStack } from 'tamagui'
    export function Test() {
      return (
        <__TamaguiNativeView style={{"flexDirection":"column","backgroundColor":"red"}}  />
      )
    }

const __TamaguiNativeView = require('react-native').View;"
`;

exports[`multiple media query components should not conflict 1`] = `
"
    import { YStack, XStack } from 'tamagui'
    export function Test() {
      return (
        <>
          <YStack bc="red" $md={{ bc: 'yellow' }} />
          <XStack bc="blue" $gtMd={{ bc: 'green' }} />
          <YStack bc="purple" $sm={{ bc: 'pink' }} />
        </>
      )
    }
"
`;

exports[`normalize dynamic values with no theme access 1`] = `
"
    import { YStack } from 'tamagui'
    const height = 200
    export function Test(props) {
      return (
        <YStack height={height} width={props.width}/>
      )
    }
"
`;

exports[`normalize dynamic values with theme access only 1`] = `
"
    import { YStack } from 'tamagui'
    export function Test(props) {
      return (
        <YStack bg='$color'/>
      )
    }
"
`;

exports[`normalize ternaries with the conditional dynamic values 1`] = `
"
  import { View } from 'tamagui'
  export function Test(props) {
    return (
      <View marginBottom={props !== 123 ? 12 : props.mb} />
    )
  }
"
`;

exports[`string ternary and media prop remain distinct on the runtime component 1`] = `
"
    import { YStack } from 'tamagui'
    export function Test({ someString }) {
      return (
        <YStack
          width={someString ? 24 : 66}
          $sm={{ height: 30 }}
        />
      )
    }
"
`;

exports[`ternary with mixed theme-token and non-token values preserves all props 1`] = `
"
    import { Text } from 'tamagui'
    export function Test({ isActive, label }) {
      return (
        <Text
          fontSize="$3"
          fontWeight={isActive ? '600' : '400'}
          color={isActive ? '$color12' : '$color11'}
        >
          {label}
        </Text>
      )
    }
"
`;

exports[`theme value extraction should work when no theme variables used 1`] = `
"
    import { Paragraph } from 'tamagui'
    export function Test() {
      return (
        <__TamaguiNativeText style={{"fontFamily":"Inter","letterSpacing":0,"fontSize":14,"lineHeight":23,"color":"red"}}>hello world</__TamaguiNativeText>
      )
    }

const __TamaguiNativeText = require('react-native').Text;"
`;

exports[`theme value extraction should work when theme variables used 1`] = `
"
    import { Paragraph } from 'tamagui'
    export function Test() {
      return (
        <Paragraph>hello world</Paragraph>
      )
    }
"
`;
